[package]
name = "pallet-sim"
version = "3.0.0"
authors = ["Luc Gerrits <luc.gerrits@univ-cotedazur.fr>"]
edition = "2018"
license = "Unlicense"
homepage = "https://www.gerrits-luc.com"
repository = "https://gogs.gerrits-luc.com/luc/substrate-SIM.git"
description = "Smart IoT for Mobility pallet for Substrate blockchain."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }


[dev-dependencies]
# sp-core = { version = "2.0.0", path = "../../primitives/core" }
# pallet-balances = { version = "2.0.0", path = "../balances" }
sp-core = { default-features = false, version = '3.0.0' }
# pallet-balances = { default-features = false, version = '3.0.0' }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
